Fixed extra space

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap');
 
-
 html{
 	font-size: 100%;
 	box-sizing: border-box;
@@ -19,6 +18,7 @@ nav {
 	justify-content: space-between;
 	padding-top: 2%;
 	ul {
+		width: 70%;
 		margin: 0;
 		justify-content: flex-end;
 		margin-right: 5%;
@@ -46,7 +46,6 @@ li {
 	border-radius: 20%;
 	background: white;
 	color: #3DBEFF;
-
 }
 
 .footerLink{
@@ -226,6 +225,13 @@ footer {
 }
 
 @media (max-width:850px) {
+
+	.hero h1{
+		font-size: 3rem;
+		text-align: center;
+		
+	}
+
 	.flex1{
 		flex-direction: column-reverse;
 	}
@@ -239,7 +245,7 @@ footer {
 
 	.textbox{
 		width: 100%;
-		padding: 25%;
+		padding: 25% 0;
 	}
 
 	.image{
@@ -265,9 +271,5 @@ footer {
 		width: 75%;
 		margin-bottom: 5%;
 		overflow: hidden;
-	}
-
-	.imgRow{
-		
 	}
 }
